--- a/Thulir.Web/Pages/LandsatBrowser.cshtml
+++ b/Thulir.Web/Pages/LandsatBrowser.cshtml
@@ -2,18 +2,7 @@
 @model Thuli.Web.Pages.LandsatBrowser
 
 @{
-    Layout = null;
+    Layout = "Shared/_Layout";
 }
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <title></title>
-</head>
-<body>
-<div>
 Hello
-</div>
-</body>
-</html>
